# geodata

./: pyproject.toml  shapefile.ipynb
