[tool.poetry]
name = "geodata"
version = "0.1.0"
description = ""
authors = ["Esther Machata <esther.machata@inoio.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.0.1"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
